@@ -1,5 +1,10 @@
 2007-06-21  Martin Leidig  <mleidig@schlund.de>
 
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: include __frame 
+	parameter to reuse redirect URL (if existing)
+
+2007-06-21  Martin Leidig  <mleidig@schlund.de>
+
 	* projects/core/xsl/forminput.xsl: bugfix: calling image geometry extension
 	function with percentage values causes NumberFormatException, quickfix just
 	copies width/height percentage values without calling the extension function
